--- a/job.html
+++ b/job.html
@@ -92,14 +92,60 @@
         </section>
 
         <!-- Plans -->
-        <section class="space-y-2">
-          <h2 class="text-sm font-semibold text-brand-dark">Plans / PDFs</h2>
+        <section class="space-y-3">
+          <div class="flex items-center justify-between">
+            <h2 class="text-sm font-semibold text-brand-dark">Plans / PDFs</h2>
+            <button
+              id="analyze-plans-btn"
+              type="button"
+              onclick="runPlanAI()"
+              class="rounded-full bg-brand-teal px-3 py-1.5 text-[11px] font-semibold text-brand-dark hover:bg-[#00B7CC]">
+              Analyze plans with AI
+            </button>
+          </div>
+
           <div id="job-plans" class="rounded-2xl border border-slate-200 bg-white p-4 shadow-sm text-xs text-slate-700">
             <p class="text-slate-500">No plans uploaded for this job.</p>
           </div>
+
+          <!-- Plan reading result -->
+          <div id="plan-ai-section" class="hidden space-y-2">
+            <h3 class="text-xs font-semibold text-brand-dark">AI plan reading result</h3>
+            <div class="rounded-2xl border border-slate-200 bg-white p-4 shadow-sm text-xs text-slate-700 space-y-2">
+              <div id="plan-ai-status" class="text-[11px] text-slate-500">
+                Click "Analyze plans with AI" to generate a summary.
+              </div>
+              <div id="plan-ai-content" class="space-y-3 hidden">
+                <div>
+                  <div class="font-semibold text-brand-dark text-xs mb-1">Site summary</div>
+                  <p id="plan-site-summary" class="text-xs text-slate-700"></p>
+                </div>
+                <div>
+                  <div class="font-semibold text-brand-dark text-xs mb-1">Utilities</div>
+                  <p id="plan-utilities" class="text-xs text-slate-700"></p>
+                </div>
+                <div>
+                  <div class="font-semibold text-brand-dark text-xs mb-1">Key values to pull from plans</div>
+                  <ul id="plan-key-values" class="list-disc list-inside text-xs text-slate-700 space-y-1"></ul>
+                </div>
+                <div>
+                  <div class="font-semibold text-brand-dark text-xs mb-1">Recommended sheets to review</div>
+                  <ul id="plan-sheets" class="list-disc list-inside text-xs text-slate-700 space-y-1"></ul>
+                </div>
+                <div>
+                  <div class="font-semibold text-brand-dark text-xs mb-1">Permit risk flags</div>
+                  <ul id="plan-flags" class="list-disc list-inside text-xs text-slate-700 space-y-1"></ul>
+                </div>
+                <div>
+                  <div class="font-semibold text-brand-dark text-xs mb-1">Notes for your EIT / admin</div>
+                  <p id="plan-notes" class="text-xs text-slate-700"></p>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
 
-        <!-- AI Output -->
+        <!-- AI permit packet (from dashboard Ask AI) -->
         <section class="space-y-3">
           <h2 class="text-sm font-semibold text-brand-dark">AI permit packet</h2>
 
@@ -143,6 +189,9 @@
     const urlParams = new URLSearchParams(window.location.search);
     const jobId = urlParams.get("id");
 
+    // We'll store the loaded job so plan AI can use it
+    let currentJob = null;
+
     async function logout() {
       await supabaseClient.auth.signOut();
       window.location.href = "login.html";
@@ -183,6 +232,7 @@
         return;
       }
 
+      currentJob = data;
       renderJobMeta(data);
       renderPlans(data.plan_urls);
       renderAIResult(data.ai_output);
@@ -210,14 +260,12 @@
       headerLabel.textContent = "Job details";
       headerLabel.classList.remove("hidden");
 
-      // Status badge (if the column exists / has value)
       const statusBadge = document.getElementById("job-status-badge");
       const status = job.status || null;
       if (status) {
         statusBadge.textContent = status;
         statusBadge.classList.remove("hidden");
 
-        // simple color hint
         const s = status.toLowerCase();
         if (s.includes("issued") || s.includes("approved")) {
           statusBadge.classList.add("border-emerald-300", "text-emerald-700");
@@ -342,252 +390,120 @@
         orderList.appendChild(li);
       });
     }
-  </script>
-</body>
-</html>
-          <p id="job-subtitle" class="mt-2 text-sm text-slate-700 max-w-xl"> </p>
 
-          <div class="mt-3 grid sm:grid-cols-3 gap-3 text-xs text-slate-700">
-            <div>
-              <div class="text-slate-500">Jurisdiction</div>
-              <div id="job-jurisdiction" class="font-semibold text-brand-dark">–</div>
-            </div>
-            <div>
-              <div class="text-slate-500">Parcel / Address</div>
-              <div id="job-parcel" class="font-semibold text-brand-dark break-words">–</div>
-            </div>
-            <div>
-              <div class="text-slate-500">Created</div>
-              <div id="job-created" class="font-semibold text-brand-dark">–</div>
-            </div>
-          </div>
-        </section>
+    // --- AI Plan Reading ---
 
-        <!-- Plans -->
-        <section class="space-y-2">
-          <h2 class="text-sm font-semibold text-brand-dark">Plans / PDFs</h2>
-          <div id="job-plans" class="rounded-2xl border border-slate-200 bg-white p-4 shadow-sm text-xs text-slate-700">
-            <p class="text-slate-500">No plans uploaded for this job.</p>
-          </div>
-        </section>
+    async function runPlanAI() {
+      const section = document.getElementById("plan-ai-section");
+      const statusEl = document.getElementById("plan-ai-status");
+      const contentEl = document.getElementById("plan-ai-content");
 
-        <!-- AI Output -->
-        <section class="space-y-3">
-          <h2 class="text-sm font-semibold text-brand-dark">AI permit packet</h2>
+      section.classList.remove("hidden");
+      contentEl.classList.add("hidden");
 
-          <div class="rounded-2xl border border-slate-200 bg-white p-4 shadow-sm">
-            <p class="text-xs text-slate-600 mb-1">Interpretation</p>
-            <p id="summary-jurisdiction" class="text-sm text-brand-dark mb-1">–</p>
-            <p id="summary-project" class="text-xs text-slate-700 mb-2">–</p>
-            <p id="summary-notes" class="text-xs text-slate-600">–</p>
-          </div>
-
-          <div class="grid md:grid-cols-2 gap-3" id="categories-container">
-            <!-- JS injects cards -->
-          </div>
-
-          <div class="rounded-2xl border border-slate-200 bg-white p-4 shadow-sm">
-            <h3 class="text-xs font-semibold text-brand-dark mb-1">Suggested order of attack</h3>
-            <ol id="recommended-order" class="list-decimal list-inside text-xs text-slate-700 space-y-1"></ol>
-          </div>
-        </section>
-      </div>
-    </main>
-
-    <!-- Footer -->
-    <footer class="border-t border-slate-200 bg-brand-bg">
-      <div class="max-w-5xl mx-auto px-4 py-4 flex flex-col sm:flex-row items-center justify-between gap-2 text-[11px] text-slate-600">
-        <span>© <span id="year"></span> PermitBot.</span>
-        <span>Volusia / Flagler early access.</span>
-      </div>
-    </footer>
-  </div>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-
-    const SUPABASE_URL = "https://cwsktitrhphppjltnquj.supabase.co";
-    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImN3c2t0aXRyaHBocHBqbHRucXVqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjM0MTM4OTMsImV4cCI6MjA3ODk4OTg5M30.4eMRLpadUbS_FEyBH8bsYqsBGX65kUI16WXKAfFXfus";
-
-    const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-    const urlParams = new URLSearchParams(window.location.search);
-    const jobId = urlParams.get("id");
-
-    async function logout() {
-      await supabaseClient.auth.signOut();
-      window.location.href = "login.html";
-    }
-
-    async function requireAuth() {
-      const { data } = await supabaseClient.auth.getSession();
-      const session = data?.session;
-      if (!session) {
-        window.location.href = "login.html";
-        return;
-      }
-      await loadJob();
-    }
-
-    requireAuth();
-
-    async function loadJob() {
-      if (!jobId) {
-        document.getElementById("job-title").textContent = "Job not found";
-        document.getElementById("job-subtitle").textContent = "Missing job id in URL.";
+      if (!currentJob) {
+        statusEl.textContent = "Job not loaded yet.";
         return;
       }
 
-      const { data, error } = await supabaseClient
-        .from("jobs")
-        .select("*")
-        .eq("id", jobId)
-        .single();
-
-      if (error || !data) {
-        console.error(error);
-        document.getElementById("job-title").textContent = "Job not found";
-        document.getElementById("job-subtitle").textContent = "Could not load job.";
-        return;
-      }
-
-      renderJobMeta(data);
-      renderPlans(data.plan_urls);
-      renderAIResult(data.ai_output);
-    }
-
-    function renderJobMeta(job) {
-      const created = job.created_at ? new Date(job.created_at) : null;
-
-      document.getElementById("job-title").textContent =
-        job.project_type || "Permit job";
-
-      document.getElementById("job-subtitle").textContent =
-        job.jurisdiction || "";
-
-      document.getElementById("job-jurisdiction").textContent =
-        job.jurisdiction || "–";
-
-      document.getElementById("job-parcel").textContent =
-        job.parcel || "–";
-
-      document.getElementById("job-created").textContent =
-        created ? created.toLocaleString() : "–";
-
-      const headerLabel = document.getElementById("job-header-label");
-      headerLabel.textContent = "Job details";
-      headerLabel.classList.remove("hidden");
-    }
-
-    function renderPlans(planUrls) {
-      const container = document.getElementById("job-plans");
-      container.innerHTML = "";
-
+      // parse plan URLs from job
       let urls = [];
+      const raw = currentJob.plan_urls;
 
-      if (Array.isArray(planUrls)) {
-        urls = planUrls;
-      } else if (typeof planUrls === "string" && planUrls.trim() !== "") {
+      if (Array.isArray(raw)) {
+        urls = raw;
+      } else if (typeof raw === "string" && raw.trim() !== "") {
         try {
-          const parsed = JSON.parse(planUrls);
+          const parsed = JSON.parse(raw);
           if (Array.isArray(parsed)) urls = parsed;
         } catch (e) {
           console.warn("Could not parse plan_urls string", e);
         }
       }
 
-      if (!urls.length) {
-        container.innerHTML = "<p class='text-slate-500 text-xs'>No plans uploaded for this job.</p>";
-        return;
-      }
+      statusEl.textContent = "Analyzing plans with AI…";
 
-      const list = document.createElement("ul");
-      list.className = "space-y-1";
-
-      urls.forEach((url, idx) => {
-        const li = document.createElement("li");
-        li.className = "text-xs";
-
-        const a = document.createElement("a");
-        a.href = url;
-        a.target = "_blank";
-        a.rel = "noopener noreferrer";
-        a.className = "text-brand-teal hover:underline break-all";
-        a.textContent = `Plan ${idx + 1}`;
-
-        li.appendChild(a);
-        list.appendChild(li);
-      });
-
-      container.appendChild(list);
-    }
-
-    function renderAIResult(data) {
-      if (!data || typeof data !== "object") {
-        document.getElementById("summary-jurisdiction").textContent = "No AI data stored for this job.";
-        document.getElementById("summary-project").textContent = "";
-        document.getElementById("summary-notes").textContent = "";
-        return;
-      }
-
-      const outSummaryJur = document.getElementById("summary-jurisdiction");
-      const outSummaryProj = document.getElementById("summary-project");
-      const outSummaryNotes = document.getElementById("summary-notes");
-      const categoriesContainer = document.getElementById("categories-container");
-      const orderList = document.getElementById("recommended-order");
-
-      outSummaryJur.textContent = data.jurisdiction_interpretation || "–";
-      outSummaryProj.textContent = data.project_classification || "–";
-      outSummaryNotes.textContent = data.notes || "–";
-
-      categoriesContainer.innerHTML = "";
-      const packet = data.permit_packet || {};
-
-      const CATEGORY_LABELS = {
-        civil_engineering: "Civil / Site",
-        building_department: "Building Dept",
-        utility_and_fdep: "Utility & FDEP",
-        stormwater: "Stormwater",
-        row_or_driveway: "ROW / Driveway",
-        other_reviews: "Other Reviews"
-      };
-
-      Object.keys(CATEGORY_LABELS).forEach(key => {
-        const items = packet[key] || [];
-        if (!Array.isArray(items) || items.length === 0) return;
-
-        const card = document.createElement("div");
-        card.className = "rounded-2xl border border-slate-200 bg-white p-3 shadow-sm";
-
-        const title = document.createElement("h3");
-        title.className = "text-xs font-semibold text-brand-dark mb-2";
-        title.textContent = CATEGORY_LABELS[key];
-        card.appendChild(title);
-
-        const list = document.createElement("ul");
-        list.className = "space-y-1";
-
-        items.forEach(item => {
-          const li = document.createElement("li");
-          li.className = "text-[11px] text-slate-700";
-          li.innerHTML = `
-            <span class="font-semibold text-brand-dark">${item.name || "Unnamed item"}</span>
-            <span class="text-slate-500"> (${item.jurisdiction || "Local"})</span><br/>
-            <span class="text-slate-600">${item.description || ""}</span><br/>
-            <span class="text-slate-500">Required if: ${item.required_if || "Typically required"}</span>
-          `;
-          list.appendChild(li);
+      try {
+        const res = await fetch("/api/ai-plan-read", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            jurisdiction: currentJob.jurisdiction,
+            project_type: currentJob.project_type,
+            parcel_or_address: currentJob.parcel,
+            plan_urls: urls,
+            extra_context: "This job was created by PermitBot's main permit packet AI. Use that context."
+          })
         });
 
-        card.appendChild(list);
-        categoriesContainer.appendChild(card);
+        if (!res.ok) {
+          throw new Error("Plan AI endpoint error");
+        }
+
+        const data = await res.json();
+        renderPlanAIResult(data);
+        statusEl.textContent = "Plan reading complete.";
+        contentEl.classList.remove("hidden");
+      } catch (err) {
+        console.error(err);
+        statusEl.textContent = "Error talking to AI for plan reading: " + err.message;
+      }
+    }
+
+    function renderPlanAIResult(data) {
+      const siteEl = document.getElementById("plan-site-summary");
+      const utilEl = document.getElementById("plan-utilities");
+      const valuesEl = document.getElementById("plan-key-values");
+      const sheetsEl = document.getElementById("plan-sheets");
+      const flagsEl = document.getElementById("plan-flags");
+      const notesEl = document.getElementById("plan-notes");
+
+      siteEl.textContent = "";
+      utilEl.textContent = "";
+      valuesEl.innerHTML = "";
+      sheetsEl.innerHTML = "";
+      flagsEl.innerHTML = "";
+      notesEl.textContent = "";
+
+      const site = data.site_summary || {};
+      const utils = data.utilities || {};
+
+      siteEl.textContent = [
+        site.likely_zoning ? `Likely zoning: ${site.likely_zoning}` : null,
+        site.likely_flood_zone ? `Likely flood zone: ${site.likely_flood_zone}` : null,
+        site.drainage_type ? `Drainage type: ${site.drainage_type}` : null,
+        site.lot_constraints ? `Lot constraints: ${site.lot_constraints}` : null
+      ]
+        .filter(Boolean)
+        .join(" • ") || "–";
+
+      utilEl.textContent = [
+        utils.water ? `Water: ${utils.water}` : null,
+        utils.sewer ? `Sewer: ${utils.sewer}` : null,
+        utils.other_utilities ? `Other: ${utils.other_utilities}` : null
+      ]
+        .filter(Boolean)
+        .join(" • ") || "–";
+
+      (data.key_values_to_pull_from_plans || []).forEach(item => {
+        const li = document.createElement("li");
+        li.textContent = item;
+        valuesEl.appendChild(li);
       });
 
-      orderList.innerHTML = "";
-      (data.recommended_order || []).forEach(step => {
+      (data.recommended_plan_sheets_to_review || []).forEach(item => {
         const li = document.createElement("li");
-        li.textContent = step;
-        orderList.appendChild(li);
+        li.textContent = item;
+        sheetsEl.appendChild(li);
       });
+
+      (data.permit_risk_flags || []).forEach(item => {
+        const li = document.createElement("li");
+        li.textContent = item;
+        flagsEl.appendChild(li);
+      });
+
+      notesEl.textContent = data.notes_for_eit_or_admin || "–";
     }
   </script>
 </body>
